<resources>
    <string name="app_name">Photo Prints</string>
    <string name="action_settings">Settings</string>
    <string name="btnOrder">Order Prints</string>
    <string name="radBtn1">4 x 9 (19 cents)</string>
    <string name="radBtn2">5 x 7 (49 Cents)</string>
    <string name="radBtn3">8 x 10 (79 Cents)</string>
    <string name="txtPrints">Number of Prints</string>
    <string name="txtTitle">Phone Photo Prints</string>
</resources>
